--- a/yacut/templates/index.html
+++ b/yacut/templates/index.html
@@ -17,20 +17,19 @@
   <header class="pb-5">
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top shadow-sm">
       <div class="container">
-        <div class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
-        </div>
+        </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="nav nav-pills">
             <li class="nav-item">
-              <a class="nav-link" href="">
+              <a class="nav-link" href="/">
                 Главная
               </a>
             </li>
           </ul>
         </div>
-
       </div>
     </nav>
   </header>
@@ -46,21 +45,33 @@
         <div class="row my-3">
           <div class="col-sm">
           </div>
-          <div class="col-sm">
-            <form>
+          <div class="col-sm-6">
+            <form method="POST">
               <div>
                 <div>
-                  <input type="text" class="form-control form-control-lg py-2 mb-3" id="form-title" name=""
-                    placeholder="Длинная ссылка">
-                  <p><span style="color:red">Текст возможной ошибки</span></p>
+                  {{ form.csrf_token }}
+                  {{ form.original_link(class="form-control form-control-lg py-3 mb-3", placeholder=form.original_link.label.text) }}
+                  {% if form.original_link.errors %}
+                  <p>
+                    <span style="color:red">{% for error in form.original_link.errors %}
+                      {{ error }}
+                    {% endfor %}
+                    </span>
+                  </p>
+                  {% endif %}
                 </div>
                 <div>
-                  <input type="url" class="form-control form-control-lg py-2 mb-3" id="form-link" name=""
-                    placeholder="Ваш вариант короткой ссылки">
-                  <p><span style="color:red">Текст возможной ошибки</span></p>
+                  {{ form.custom_id(class="form-control form-control-lg py-3 mb-3", placeholder=form.custom_id.label.text) }}
+                  {% if form.custom_id.errors %}
+                  <p>
+                    <span style="color:red">{% for error in form.custom_id.errors %}
+                      {{ error }}
+                    {% endfor %}
+                    </span>
+                  </p>
+                  {% endif %}
                 </div>
-
-                <input type="submit" class="btn btn-primary" value="Создать">
+                {{ form.submit(class="btn btn-primary py-3") }}
               </div>
             </form>
           </div>
@@ -70,13 +81,16 @@
       </div>
 
       <div class="container">
-        <div class="row ">
+        <div class="row">
           <div class="col-sm">
           </div>
-          <div class="col-sm">
+          <div class="col-sm-6">
+            {% if short_url %}
             <p class="text-center">
-            <h5 class="text-center">Пример информационного сообщения</h5>
+              Ваша короткая ссылка: <a href="{{ url_for('redirect_to_original', short_id=short_url) }}">{{ url_for('redirect_to_original', short_id=short_url, _external=True) }}</a>
+
             </p>
+            {% endif %}
           </div>
           <div class="col-sm">
           </div>
@@ -88,10 +102,11 @@
   <footer class="fixed-bottom border-top text-center py-3">
     <p>Укоротитель ссылок YaCut</p>
   </footer>
+
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-  integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-  integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 </html>
