--- a/yacut/templates/index.html
+++ b/yacut/templates/index.html
@@ -25,5 +25,23 @@
       </div>
     </div>
   </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm">
+      </div>
+      <div class="col-sm-6">
+        {% if short_url %}
+        <p class="text-center">
+          Ваша новая ссылка готова:<br>
+          <a href="{{ url_for('redirect_to_original', short_id=short_url, _external=True) }}">
+            {{ url_for('redirect_to_original', short_id=short_url, _external=True) }}
+        </a>
+        </p>
+        {% endif %}
+      </div>
+      <div class="col-sm">
+      </div>
+    </div>
+  </div>
 </section>
 {% endblock %}
