--- a/yacut/templates/base.html
+++ b/yacut/templates/base.html
@@ -9,36 +9,36 @@
   <title>{% block title %}YaCut - укоротитель ссылок{% endblock %}</title>
 </head>
 <body>
-    <header class="pb-5">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top shadow-sm">
-          <div class="container">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-              aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="nav nav-pills">
-                <li class="nav-item">
-                  <a class="nav-link" href="/">
-                    Главная
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </nav>
-      </header>
+  <header class="pb-5">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top shadow-sm">
+      <div class="container">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="nav nav-pills">
+            <li class="nav-item">
+              <a class="nav-link" href="/">
+                Главная
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
   
   <main>
     {% block content %}
     {% endblock %}
   </main>
 
-  <footer class="fixed-bottom border-top text-center py-3">
-    <p>Укоротитель ссылок YaCut</p>
-  </footer>
+  <footer class="fixed-bottom border-top text-center py-3"> 
+    <p>Укоротитель ссылок YaCut</p> 
+</footer> 
 
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-</body>
+<script src="{{ url_for('static', filename='js/jquery-3.2.1.slim.min.js') }}"></script> 
+<script src="{{ url_for('static', filename='js/bootstrap.bundle.min.js') }}"></script> 
+</body> 
 </html>
