--- a/yacut/templates/base.html
+++ b/yacut/templates/base.html
@@ -19,7 +19,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="nav nav-pills">
             <li class="nav-item">
-              <a class="nav-link" href="#" onclick="location.reload();">
+              <a class="nav-link" href="{{ url_for('index') }}">
                 Главная
               </a>
             </li>
